--- a/css/style.css
+++ b/css/style.css
@@ -159,8 +159,24 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /*Alinha os itens verticalmente*/   
+    /*Alinha os itens verticalmente*/
+    padding: 3vw 10vw 4vw 10vw;
+}
 
+header h1 {
+    font-size: 1.8rem;
+    font-weight: bold;
+}
+
+header nav ul {
+    display: flex;
+}
+
+header nav ul li {
+    margin: 0 10px;
+}
+
+header nav ul li a.botao {
     background-color: #0E8388;
     color: white;
     padding: 8px 15px 8px 15px;
@@ -366,7 +382,7 @@ footer ul li {
     main section.products ul li {
         width: 90%;
         margin: 2vw 2vw 2vw 2vw;
-        
+
     }
 
     main section.build p.terceiro {
@@ -382,7 +398,7 @@ footer ul li {
         margin: 0 0 0 0;
     }
 
-    main section.build div.dividir p.imagem img{
+    main section.build div.dividir p.imagem img {
         width: 80%;
     }
 
@@ -396,7 +412,7 @@ footer ul li {
         margin: 0 auto 0 auto;
         text-align: center;
     }
-    
+
     main section.build div.dividir div p {
         font-size: 1.3rem;
         text-align: center;
@@ -415,4 +431,3 @@ footer ul li {
     }
 
 }
-
